y.output
State 331 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 infix_expression: primary_expression
    6                 | infix_expression '[' expression ']'
    7                 | infix_expression '(' ')'
    8                 | infix_expression '(' argument_expression_list ')'
    9                 | infix_expression '.' IDENTIFIER
   10                 | infix_expression PTR_OPERAND IDENTIFIER
   11                 | infix_expression INC_OPERAND
   12                 | infix_expression DEC_OPERAND

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: infix_expression
   16                 | INC_OPERAND unary_expression
   17                 | DEC_OPERAND unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OPERAND additive_expression
   38                 | shift_expression RIGHT_OPERAND additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OPERAND shift_expression
   43                      | relational_expression GE_OPERAND shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OPERAND relational_expression
   46                    | equality_expression NE_OPERAND relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OPERAND inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OPERAND logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGNMENT
   63                    | DIV_ASSIGNMENT
   64                    | MOD_ASSIGNMENT
   65                    | ADD_ASSIGNMENT
   66                    | SUB_ASSIGNMENT
   67                    | LEFT_ASSIGNMENT
   68                    | RIGHT_ASSIGNMENT
   69                    | AND_ASSIGNMENT
   70                    | XOR_ASSIGNMENT
   71                    | OR_ASSIGNMENT

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers
   81                       | type_qualifier
   82                       | type_qualifier declaration_specifiers

   83 init_declarator_list: init_declarator
   84                     | init_declarator_list ',' init_declarator

   85 init_declarator: declarator
   86                | declarator '=' initializer

   87 storage_class_specifier: TYPEDEF
   88                        | EXTERN
   89                        | STATIC
   90                        | AUTO
   91                        | REGISTER

   92 type_specifier: VOID
   93               | CHAR
   94               | SHORT
   95               | INT
   96               | LONG
   97               | FLOAT
   98               | DOUBLE
   99               | SIGNED
  100               | UNSIGNED
  101               | struct_or_union_specifier
  102               | enum_specifier

  103 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  104                          | struct_or_union '{' struct_declaration_list '}'
  105                          | struct_or_union IDENTIFIER

  106 struct_or_union: STRUCT
  107                | UNION

  108 struct_declaration_list: struct_declaration
  109                        | struct_declaration_list struct_declaration

  110 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list
  112                         | type_specifier
  113                         | type_qualifier specifier_qualifier_list
  114                         | type_qualifier

  115 struct_declarator_list: struct_declarator
  116                       | struct_declarator_list ',' struct_declarator

  117 struct_declarator: declarator
  118                  | ':' constant_expression
  119                  | declarator ':' constant_expression

  120 enum_specifier: ENUM '{' enumerator_list '}'
  121               | ENUM IDENTIFIER '{' enumerator_list '}'
  122               | ENUM IDENTIFIER

  123 enumerator_list: enumerator
  124                | enumerator_list ',' enumerator

  125 enumerator: IDENTIFIER
  126           | IDENTIFIER '=' constant_expression

  127 type_qualifier: CONST
  128               | VOLATILE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: IDENTIFIER
  132                  | '(' declarator ')'
  133                  | direct_declarator '[' constant_expression ']'
  134                  | direct_declarator '[' ']'
  135                  | direct_declarator '(' parameter_type_list ')'
  136                  | direct_declarator '(' identifier_list ')'
  137                  | direct_declarator '(' ')'

  138 pointer: '*'
  139        | '*' type_qualifier_list
  140        | '*' pointer
  141        | '*' type_qualifier_list pointer

  142 type_qualifier_list: type_qualifier
  143                    | type_qualifier_list type_qualifier

  144 parameter_type_list: parameter_list

  145 parameter_list: parameter_declaration
  146               | parameter_list ',' parameter_declaration

  147 parameter_declaration: declaration_specifiers declarator
  148                      | declaration_specifiers abstract_declarator
  149                      | declaration_specifiers

  150 identifier_list: IDENTIFIER
  151                | identifier_list ',' IDENTIFIER

  152 type_name: specifier_qualifier_list
  153          | specifier_qualifier_list abstract_declarator

  154 abstract_declarator: pointer
  155                    | direct_abstract_declarator
  156                    | pointer direct_abstract_declarator

  157 direct_abstract_declarator: '(' abstract_declarator ')'
  158                           | '[' ']'
  159                           | '[' constant_expression ']'
  160                           | direct_abstract_declarator '[' ']'
  161                           | direct_abstract_declarator '[' constant_expression ']'
  162                           | '(' ')'
  163                           | '(' parameter_type_list ')'
  164                           | direct_abstract_declarator '(' ')'
  165                           | direct_abstract_declarator '(' parameter_type_list ')'

  166 initializer: assignment_expression
  167            | '{' initializer_list '}'
  168            | '{' initializer_list ',' '}'

  169 initializer_list: initializer
  170                 | initializer_list ',' initializer

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER ':' statement
  178                  | CASE constant_expression ':' statement
  179                  | DEFAULT ':' statement

  180 compound_statement: '{' '}'
  181                   | '{' statement_list '}'
  182                   | '{' declaration_list '}'
  183                   | '{' declaration_list statement_list '}'

  184 declaration_list: declaration
  185                 | declaration_list declaration

  186 statement_list: statement
  187               | statement_list statement

  188 expression_statement: ';'
  189                     | expression ';'

  190 selection_statement: IF '(' expression ')' statement dangling
  191                    | SWITCH '(' expression ')' statement

  192 dangling: ELSE statement
  193         | %empty

  194 iteration_statement: WHILE '(' expression ')' statement
  195                    | DO statement WHILE '(' expression ')' ';'
  196                    | FOR '(' expression_statement expression_statement ')' statement
  197                    | FOR '(' expression_statement expression_statement expression ')' statement

  198 jump_statement: GOTO IDENTIFIER ';'
  199               | CONTINUE ';'
  200               | BREAK ';'
  201               | RETURN ';'
  202               | RETURN expression ';'

  203 translation_unit: external_declaration
  204                 | translation_unit external_declaration

  205 external_declaration: function_definition
  206                     | declaration

  207 function_definition: declaration_specifiers declarator declaration_list compound_statement
  208                    | declaration_specifiers declarator compound_statement
  209                    | declarator declaration_list compound_statement
  210                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'%' (37) 32
'&' (38) 21 48
'(' (40) 4 7 8 20 28 132 135 136 137 157 162 163 164 165 190 191 194
    195 196 197
')' (41) 4 7 8 20 28 132 135 136 137 157 162 163 164 165 190 191 194
    195 196 197
'*' (42) 22 30 138 139 140 141
'+' (43) 23 34
',' (44) 14 73 84 116 124 146 151 168 170
'-' (45) 24 35
'.' (46) 9
'/' (47) 31
':' (58) 58 118 119 177 178 179
';' (59) 75 76 110 188 189 195 198 199 200 201 202
'<' (60) 40
'=' (61) 61 86 126
'>' (62) 41
'?' (63) 58
'[' (91) 6 133 134 158 159 160 161
']' (93) 6 133 134 158 159 160 161
'^' (94) 50
'{' (123) 103 104 120 121 167 168 180 181 182 183
'|' (124) 52
'}' (125) 103 104 120 121 167 168 180 181 182 183
'~' (126) 25
error (256)
IDENTIFIER (258) 1 9 10 103 105 121 122 125 126 131 150 151 177 198
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 19 20
PTR_OPERAND (262) 10
INC_OPERAND (263) 11 16
DEC_OPERAND (264) 12 17
LEFT_OPERAND (265) 37
RIGHT_OPERAND (266) 38
LE_OPERAND (267) 42
GE_OPERAND (268) 43
EQ_OPERAND (269) 45
NE_OPERAND (270) 46
AND_OPERAND (271) 54
OR_OPERAND (272) 56
MUL_ASSIGNMENT (273) 62
DIV_ASSIGNMENT (274) 63
MOD_ASSIGNMENT (275) 64
ADD_ASSIGNMENT (276) 65
SUB_ASSIGNMENT (277) 66
LEFT_ASSIGNMENT (278) 67
RIGHT_ASSIGNMENT (279) 68
AND_ASSIGNMENT (280) 69
XOR_ASSIGNMENT (281) 70
OR_ASSIGNMENT (282) 71
TYPEDEF (283) 87
EXTERN (284) 88
STATIC (285) 89
AUTO (286) 90
REGISTER (287) 91
CHAR (288) 93
SHORT (289) 94
INT (290) 95
LONG (291) 96
SIGNED (292) 99
UNSIGNED (293) 100
FLOAT (294) 97
DOUBLE (295) 98
CONST (296) 127
VOLATILE (297) 128
VOID (298) 92
STRUCT (299) 106
UNION (300) 107
ENUM (301) 120 121 122
CASE (302) 178
DEFAULT (303) 179
IF (304) 190
ELSE (305) 192
SWITCH (306) 191
WHILE (307) 194 195
DO (308) 195
FOR (309) 196 197
GOTO (310) 198
CONTINUE (311) 199
BREAK (312) 200
RETURN (313) 201 202


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
primary_expression (84)
    on left: 1 2 3 4, on right: 5
infix_expression (85)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
argument_expression_list (86)
    on left: 13 14, on right: 8 14
unary_expression (87)
    on left: 15 16 17 18 19 20, on right: 16 17 19 27 60
unary_operator (88)
    on left: 21 22 23 24 25 26, on right: 18
cast_expression (89)
    on left: 27 28, on right: 18 28 29 30 31 32
multiplicative_expression (90)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
additive_expression (91)
    on left: 33 34 35, on right: 34 35 36 37 38
shift_expression (92)
    on left: 36 37 38, on right: 37 38 39 40 41 42 43
relational_expression (93)
    on left: 39 40 41 42 43, on right: 40 41 42 43 44 45 46
equality_expression (94)
    on left: 44 45 46, on right: 45 46 47 48
and_expression (95)
    on left: 47 48, on right: 48 49 50
exclusive_or_expression (96)
    on left: 49 50, on right: 50 51 52
inclusive_or_expression (97)
    on left: 51 52, on right: 52 53 54
logical_and_expression (98)
    on left: 53 54, on right: 54 55 56
logical_or_expression (99)
    on left: 55 56, on right: 56 57 58
conditional_expression (100)
    on left: 57 58, on right: 58 59 74
assignment_expression (101)
    on left: 59 60, on right: 13 14 60 72 73 166
assignment_operator (102)
    on left: 61 62 63 64 65 66 67 68 69 70 71, on right: 60
expression (103)
    on left: 72 73, on right: 4 6 58 73 189 190 191 194 195 197 202
constant_expression (104)
    on left: 74, on right: 118 119 126 133 159 161 178
declaration (105)
    on left: 75 76, on right: 184 185 206
declaration_specifiers (106)
    on left: 77 78 79 80 81 82, on right: 75 76 78 80 82 147 148 149
    207 208
init_declarator_list (107)
    on left: 83 84, on right: 76 84
init_declarator (108)
    on left: 85 86, on right: 83 84
storage_class_specifier (109)
    on left: 87 88 89 90 91, on right: 77 78
type_specifier (110)
    on left: 92 93 94 95 96 97 98 99 100 101 102, on right: 79 80 111
    112
struct_or_union_specifier (111)
    on left: 103 104 105, on right: 101
struct_or_union (112)
    on left: 106 107, on right: 103 104 105
struct_declaration_list (113)
    on left: 108 109, on right: 103 104 109
struct_declaration (114)
    on left: 110, on right: 108 109
specifier_qualifier_list (115)
    on left: 111 112 113 114, on right: 110 111 113 152 153
struct_declarator_list (116)
    on left: 115 116, on right: 110 116
struct_declarator (117)
    on left: 117 118 119, on right: 115 116
enum_specifier (118)
    on left: 120 121 122, on right: 102
enumerator_list (119)
    on left: 123 124, on right: 120 121 124
enumerator (120)
    on left: 125 126, on right: 123 124
type_qualifier (121)
    on left: 127 128, on right: 81 82 113 114 142 143
declarator (122)
    on left: 129 130, on right: 85 86 117 119 132 147 207 208 209 210
direct_declarator (123)
    on left: 131 132 133 134 135 136 137, on right: 129 130 133 134
    135 136 137
pointer (124)
    on left: 138 139 140 141, on right: 129 140 141 154 156
type_qualifier_list (125)
    on left: 142 143, on right: 139 141 143
parameter_type_list (126)
    on left: 144, on right: 135 163 165
parameter_list (127)
    on left: 145 146, on right: 144 146
parameter_declaration (128)
    on left: 147 148 149, on right: 145 146
identifier_list (129)
    on left: 150 151, on right: 136 151
type_name (130)
    on left: 152 153, on right: 20 28
abstract_declarator (131)
    on left: 154 155 156, on right: 148 153 157
direct_abstract_declarator (132)
    on left: 157 158 159 160 161 162 163 164 165, on right: 155 156
    160 161 164 165
initializer (133)
    on left: 166 167 168, on right: 86 169 170
initializer_list (134)
    on left: 169 170, on right: 167 168 170
statement (135)
    on left: 171 172 173 174 175 176, on right: 177 178 179 186 187
    190 191 192 194 195 196 197
labeled_statement (136)
    on left: 177 178 179, on right: 171
compound_statement (137)
    on left: 180 181 182 183, on right: 172 207 208 209 210
declaration_list (138)
    on left: 184 185, on right: 182 183 185 207 209
statement_list (139)
    on left: 186 187, on right: 181 183 187
expression_statement (140)
    on left: 188 189, on right: 173 196 197
selection_statement (141)
    on left: 190 191, on right: 174
dangling (142)
    on left: 192 193, on right: 190
iteration_statement (143)
    on left: 194 195 196 197, on right: 175
jump_statement (144)
    on left: 198 199 200 201 202, on right: 176
translation_unit (145)
    on left: 203 204, on right: 0 204
external_declaration (146)
    on left: 205 206, on right: 203 204
function_definition (147)
    on left: 207 208 209 210, on right: 205


State 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    ENUM        shift, and go to state 20
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    declarator                 go to state 31
    direct_declarator          go to state 32
    pointer                    go to state 33
    translation_unit           go to state 34
    external_declaration       go to state 35
    function_definition        go to state 36


State 1

  131 direct_declarator: IDENTIFIER .

    $default  reduce using rule 131 (direct_declarator)


State 2

   87 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 87 (storage_class_specifier)


State 3

   88 storage_class_specifier: EXTERN .

    $default  reduce using rule 88 (storage_class_specifier)


State 4

   89 storage_class_specifier: STATIC .

    $default  reduce using rule 89 (storage_class_specifier)


State 5

   90 storage_class_specifier: AUTO .

    $default  reduce using rule 90 (storage_class_specifier)


State 6

   91 storage_class_specifier: REGISTER .

    $default  reduce using rule 91 (storage_class_specifier)


State 7

   93 type_specifier: CHAR .

    $default  reduce using rule 93 (type_specifier)


State 8

   94 type_specifier: SHORT .

    $default  reduce using rule 94 (type_specifier)


State 9

   95 type_specifier: INT .

    $default  reduce using rule 95 (type_specifier)


State 10

   96 type_specifier: LONG .

    $default  reduce using rule 96 (type_specifier)


State 11

   99 type_specifier: SIGNED .

    $default  reduce using rule 99 (type_specifier)


State 12

  100 type_specifier: UNSIGNED .

    $default  reduce using rule 100 (type_specifier)


State 13

   97 type_specifier: FLOAT .

    $default  reduce using rule 97 (type_specifier)


State 14

   98 type_specifier: DOUBLE .

    $default  reduce using rule 98 (type_specifier)


State 15

  127 type_qualifier: CONST .

    $default  reduce using rule 127 (type_qualifier)


State 16

  128 type_qualifier: VOLATILE .

    $default  reduce using rule 128 (type_qualifier)


State 17

   92 type_specifier: VOID .

    $default  reduce using rule 92 (type_specifier)


State 18

  106 struct_or_union: STRUCT .

    $default  reduce using rule 106 (struct_or_union)


State 19

  107 struct_or_union: UNION .

    $default  reduce using rule 107 (struct_or_union)


State 20

  120 enum_specifier: ENUM . '{' enumerator_list '}'
  121               | ENUM . IDENTIFIER '{' enumerator_list '}'
  122               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 37
    '{'         shift, and go to state 38


State 21

  132 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    declarator         go to state 39
    direct_declarator  go to state 32
    pointer            go to state 33


State 22

  138 pointer: '*' .
  139        | '*' . type_qualifier_list
  140        | '*' . pointer
  141        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    '*'       shift, and go to state 22

    $default  reduce using rule 138 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


State 23

  206 external_declaration: declaration .

    $default  reduce using rule 206 (external_declaration)


State 24

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  207 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  208                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 21
    '*'         shift, and go to state 22
    ';'         shift, and go to state 43

    init_declarator_list  go to state 44
    init_declarator       go to state 45
    declarator            go to state 46
    direct_declarator     go to state 32
    pointer               go to state 33


State 25

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 26

   79 declaration_specifiers: type_specifier .
   80                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 27

  101 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 101 (type_specifier)


State 28

  103 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  104                          | struct_or_union . '{' struct_declaration_list '}'
  105                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 49
    '{'         shift, and go to state 50


State 29

  102 type_specifier: enum_specifier .

    $default  reduce using rule 102 (type_specifier)


State 30

   81 declaration_specifiers: type_qualifier .
   82                       | type_qualifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 31

  209 function_definition: declarator . declaration_list compound_statement
  210                    | declarator . compound_statement
